# RayTracer

./: CMakeLists.txt  README.md
shaders/: compute.glsl  fragment.glsl  vertex.glsl
src/: camera.cpp  camera.h  config.h  main.cpp  shader.cpp  shader.h
